--- a/FinanceTracker/src/main/resources/com/example/financetracker/LoginPage.fxml
+++ b/FinanceTracker/src/main/resources/com/example/financetracker/LoginPage.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -30,11 +31,6 @@
                   <Font name="Arial" size="13.0" />
                </font>
             </TextField>
-            <TextField fx:id="tf_password" accessibleRole="PASSWORD_FIELD" layoutX="15.0" layoutY="341.0" prefHeight="25.0" prefWidth="215.0" promptText="Enter Password" style="-fx-background-radius: 12; -fx-background-color: #8ecae6;">
-               <font>
-                  <Font name="Poppins Regular" size="13.0" />
-               </font>
-            </TextField>
             <Button fx:id="button_login" layoutX="114.0" layoutY="413.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="115.0" style="-fx-background-color: #FF9F1C; -fx-cursor: hand;" text="Login" textFill="WHITE">
                <font>
                   <Font name="Poppins Bold" size="14.0" />
@@ -44,6 +40,7 @@
                <font>
                   <Font name="Poppins Bold" size="14.0" />
                </font></Button>
+            <PasswordField fx:id="tf_password" layoutX="12.0" layoutY="348.0" prefHeight="26.0" prefWidth="220.0" promptText="Enter Password" style="-fx-background-radius: 12; -fx-background-color: #8ecae6;" />
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="600.0" prefWidth="579.0" style="-fx-background-color: #FFFFFF;">
